# cst816s

./: Cargo.toml  README.md  openocd.cfg  openocd.gdb  segger.gdb
.cargo/: config
examples/: touchpad.rs
src/: lib.rs
