[package]
name = "cst816s"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


[dependencies]
arrayvec = {version = "0.5.1", default-features = false}
cortex-m = "0.6.2"
embedded-hal = {version ="0.2.3", features = ["unproven"] }


[dev-dependencies]
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
nrf52832-hal = {version = "0.8.1", default-features = false, features = ["xxAA-package", "rt"]}
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
#st7789 = "0.2.2"
st7789 = { git = "https://github.com/tstellanova/st7789" }
#st7789 = { path = "../st7789" }
shared-bus = {version = "0.1.4", features = ["cortexm"] }
embedded-graphics = "0.6.0"
