[package]
name = "cst816s"
version = "1.0.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "CST816S touchscreen driver for embedded hal / no_std"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/cst816s"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "CST816S",
    "touchscreen",
    "PineTime"
]
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
nrf52832-hal = { version = "0.10", default-features = false, features = ["xxAA-package", "rt"] }
panic-halt = "0.2.0"
st7789 = { version = "0.5.0", features = ["graphics", "batch", "buffer"], default-features = false }
display-interface = "0.4.0"
display-interface-spi = "0.4.0"
shared-bus = {version = "0.1.4", features = ["cortexm"] }
embedded-graphics = "0.6.2"
